# asd_progetto2021

./: .clang-format  .gitignore  CMakeLists.txt  README.md  checker.cpp  solution.cpp
include/asd_progetto2021/: assert.hpp  baseline.hpp  common.hpp  dataset.hpp  dataset_io.hpp  matching.hpp  tsp.hpp  tsp_matching_opt.hpp
output/baseline/: output0.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
output/baseline_refactor/: output0.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
output/best/: output0.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
output/random/: output0.txt  output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
output/random_refactor/: output13.txt  output17.txt  output18.txt  output2.txt  output3.txt  output5.txt  output6.txt  output7.txt  output8.txt  (+1 more)
scripts/: compare.py  merge.py  run_all.sh
superbuild/: CMakeLists.txt  superbuild.cpp
(+118 files in other folders)
